--- a/flex-direction.html
+++ b/flex-direction.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        .container{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+        }
+        .size{
+            width: 100px;
+            height: 100px;
+            border: 1px solid gray;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <div>div1</div>
-        <div></div>111
+    <div style="display: flex" class="container">
+        <div style="" class="size"></div>
     </div>
 </body>
 </html>
