--- a/flex-direction.html
+++ b/flex-direction.html
@@ -8,6 +8,7 @@
         .container{
             width: 500px;
             height: 500px;
+            display: flex;
             border: 1px solid black;
         }
         .size{
@@ -16,11 +17,38 @@
             border: 1px solid gray;
             border-radius: 50%;
         }
+
+        .container2{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: center;
+        }
+
+        .container3{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: flex-end; // 调整主轴方向上排列位置
+        }
+
     </style>
 </head>
 <body>
-    <div style="display: flex" class="container">
+    <div class="container">
         <div style="" class="size"></div>
     </div>
+
+    <div class="container2">
+        <div class="size"></div>
+    </div>
+
+    <div class="container3">
+        <div class="size"></div>
+    </div>
+
+
 </body>
 </html>
