--- a/flex-direction.html
+++ b/flex-direction.html
@@ -5,20 +5,21 @@
     <title>test update branch </title>
 
     <style>
-        .container{
+        .container {
             width: 500px;
             height: 500px;
             display: flex;
             border: 1px solid black;
         }
-        .size{
+
+        .size {
             width: 100px;
             height: 100px;
             border: 1px solid gray;
             border-radius: 50%;
         }
 
-        .container2{
+        .container2 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -26,29 +27,106 @@
             justify-content: center;
         }
 
-        .container3{
+        .container3 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
             display: flex;
-            justify-content: flex-end; // 调整主轴方向上排列位置
+            justify-content: flex-end;
+        / / 调整主轴方向上排列位置
+        }
+
+        .container4 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        .container5{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container6{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .container7{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-end;
+        }
+
+        .container8{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+        }
+
+        .container9{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
         }
 
     </style>
 </head>
 <body>
-    <div class="container">
-        <div style="" class="size"></div>
-    </div>
+        <div class="container">
+            <div style="" class="size"></div>
+        </div>
 
-    <div class="container2">
-        <div class="size"></div>
-    </div>
+        <div class="container2">
+            <div class="size"></div>
+        </div>
 
-    <div class="container3">
-        <div class="size"></div>
-    </div>
+        <div class="container3">
+            <div class="size"></div>
+        </div>
 
+        <div class="container4">
+            <div class="size"></div>
+        </div>
 
+        <div class="container5">
+            <div class="size"></div>
+        </div>
+
+        <div class="container6">
+            <div class="size">6</div>
+        </div>
+
+        <div class="container7">
+            <div class="size"></div>
+        </div>
+
+        <div class="container8">
+            <div class="size"></div>
+        </div>
+
+        <div class="container9">
+            <div class="size"></div>
+        </div>
 </body>
 </html>
