--- a/flex-direction.html
+++ b/flex-direction.html
@@ -33,7 +33,6 @@
             border: 1px solid black;
             display: flex;
             justify-content: flex-end;
-        / / 调整主轴方向上排列位置
         }
 
         .container4 {
@@ -90,43 +89,91 @@
             align-items: flex-end;
         }
 
+        .container10{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .container11{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .container12{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
     </style>
 </head>
 <body>
-<div class="container">
-    <div style="" class="size"></div>
-</div>
+        <div class="container">
+            <div style="" class="size"></div>
+        </div>
 
-<div class="container2">
-    <div class="size"></div>
-</div>
+        <div class="container2">
+            <div class="size"></div>
+        </div>
 
-<div class="container3">
-    <div class="size"></div>
-</div>
+        <div class="container3">
+            <div class="size"></div>
+        </div>
 
-<div class="container4">
-    <div class="size"></div>
-</div>
+        <div class="container4">
+            <div class="size"></div>
+        </div>
 
-<div class="container5">
-    <div class="size"></div>
-</div>
+        <div class="container5">
+            <div class="size"></div>
+        </div>
 
-<div class="container6">
-    <div class="size">6</div>
-</div>
+        <div class="container6">
+            <div class="size">6</div>
+        </div>
 
-<div class="container7">
-    <div class="size"></div>
-</div>
+        <div class="container7">
+            <div class="size"></div>
+        </div>
 
-<div class="container8">
-    <div class="size"></div>
-</div>
+        <div class="container8">
+            <div class="size"></div>
+        </div>
 
-<div class="container9">
-    <div class="size"></div>
-</div>
+        <div class="container9">
+            <div class="size"></div>
+        </div>
+
+        <div class="container10">
+            <div class="size">0</div>
+            <div class="size">1</div>
+        </div>
+
+        <div class="container11">
+            <div class="size">1</div>
+            <div class="size">2</div>
+        </div>
+
+        <div class="container12">
+            <div class="size">1</div>
+            <div class="size">2</div>
+        </div>
+
+        <div>
+            <div class="size">1</div>
+        </div>
 </body>
 </html>
