增加第十四个

--- a/flex-direction.html
+++ b/flex-direction.html
@@ -136,6 +136,19 @@
             align-self: flex-end;
         }
 
+        .container14{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .container14 div:nth-child(2){
+            align-self:center;
+        }
+
     </style>
 </head>
 <body>
@@ -197,6 +210,11 @@
         <div class="container13">
             <div class="size">1111</div>
             <div class="size">22222</div>
+        </div>
+
+        <div class="container14">
+            <div class="size">111</div>
+            <div class="size">222</div>
         </div>
 </body>
 </html>
