--- a/flex-direction.html
+++ b/flex-direction.html
@@ -149,6 +149,19 @@
             align-self:center;
         }
 
+        .container15{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .container15 div:nth-child(2){
+            align-self: flex-end;
+        }
     </style>
 </head>
 <body>
@@ -215,6 +228,10 @@
         <div class="container14">
             <div class="size">111</div>
             <div class="size">222</div>
+        </div>
+        <div class="container15">
+            <div class="size"></div>
+            <div class="size"></div>
         </div>
 </body>
 </html>
