--- a/flex-direction.html
+++ b/flex-direction.html
@@ -162,6 +162,20 @@
         .container15 div:nth-child(2){
             align-self: flex-end;
         }
+        .container16 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .container16 div:nth-child(2){
+            align-self: flex-end;
+        }
+
     </style>
 </head>
 <body>
@@ -232,6 +246,11 @@
         <div class="container15">
             <div class="size"></div>
             <div class="size"></div>
+        </div>
+
+        <div class="container16">
+            <div class="size">111</div>
+            <div class="size">222</div>
         </div>
 </body>
 </html>
