--- a/flex-direction.html
+++ b/flex-direction.html
@@ -89,7 +89,7 @@
             align-items: flex-end;
         }
 
-        .container10{
+        .container10 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -98,7 +98,7 @@
             align-items: flex-start;
         }
 
-        .container11{
+        .container11 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -108,7 +108,7 @@
             align-items: flex-start;
         }
 
-        .container12{
+        .container12 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -118,11 +118,11 @@
             align-items: flex-start;
         }
 
-        .container12 div:nth-child(2){
+        .container12 div:nth-child(2) {
             align-self: center;
         }
 
-        .container13{
+        .container13 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -132,24 +132,11 @@
             align-items: flex-start;
         }
 
-        .container13 div:nth-child(2){
+        .container13 div:nth-child(2) {
             align-self: flex-end;
         }
 
-        .container14{
-            width: 500px;
-            height: 500px;
-            border: 1px solid black;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: flex-start;
-        }
-        .container14 div:nth-child(2){
-            align-self:center;
-        }
-
-        .container15{
+        .container14 {
             width: 500px;
             height: 500px;
             border: 1px solid black;
@@ -159,9 +146,24 @@
             align-items: flex-start;
         }
 
-        .container15 div:nth-child(2){
+        .container14 div:nth-child(2) {
+            align-self: center;
+        }
+
+        .container15 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .container15 div:nth-child(2) {
             align-self: flex-end;
         }
+
         .container16 {
             width: 500px;
             height: 500px;
@@ -172,85 +174,178 @@
             align-items: flex-start;
         }
 
-        .container16 div:nth-child(2){
+        .container16 div:nth-child(2) {
             align-self: flex-end;
         }
 
+        .container17 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-end;
+        }
+
+        .container18 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .container18 div:nth-child(1) {
+            align-self: flex-end;
+        }
+
+        .container19 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+        .container20{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .container20 div:nth-child(2){
+            align-self: center;
+        }
+        .container20 div:nth-child(3){
+            align-self: flex-end;
+        }
+        .container21{
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .container21 div:nth-child(1){
+           align-self: flex-end;
+        }
+        .container21 div:nth-child(2){
+           align-self: center;
+        }
     </style>
 </head>
 <body>
-        <div class="container">
-            <div style="" class="size"></div>
-        </div>
+<div class="container">
+    <div style="" class="size"></div>
+</div>
 
-        <div class="container2">
-            <div class="size"></div>
-        </div>
+<div class="container2">
+    <div class="size"></div>
+</div>
 
-        <div class="container3">
-            <div class="size"></div>
-        </div>
+<div class="container3">
+    <div class="size"></div>
+</div>
 
-        <div class="container4">
-            <div class="size"></div>
-        </div>
+<div class="container4">
+    <div class="size"></div>
+</div>
 
-        <div class="container5">
-            <div class="size"></div>
-        </div>
+<div class="container5">
+    <div class="size"></div>
+</div>
 
-        <div class="container6">
-            <div class="size">6</div>
-        </div>
+<div class="container6">
+    <div class="size">6</div>
+</div>
 
-        <div class="container7">
-            <div class="size"></div>
-        </div>
+<div class="container7">
+    <div class="size"></div>
+</div>
 
-        <div class="container8">
-            <div class="size"></div>
-        </div>
+<div class="container8">
+    <div class="size"></div>
+</div>
 
-        <div class="container9">
-            <div class="size"></div>
-        </div>
+<div class="container9">
+    <div class="size"></div>
+</div>
 
-        <div class="container10">
-            <div class="size">0</div>
-            <div class="size">1</div>
-        </div>
+<div class="container10">
+    <div class="size">0</div>
+    <div class="size">1</div>
+</div>
 
-        <div class="container11">
-            <div class="size">1</div>
-            <div class="size">2</div>
-        </div>
+<div class="container11">
+    <div class="size">1</div>
+    <div class="size">2</div>
+</div>
 
-        <div class="container12">
-            <div class="size">1111</div>
-            <div class="size">22222</div>
-        </div>
+<div class="container12">
+    <div class="size">1111</div>
+    <div class="size">22222</div>
+</div>
 
-        <div>
-            <div class="size">1</div>
-        </div>
+<div>
+    <div class="size">1</div>
+</div>
 
-        <div class="container13">
-            <div class="size">1111</div>
-            <div class="size">22222</div>
-        </div>
+<div class="container13">
+    <div class="size">1111</div>
+    <div class="size">22222</div>
+</div>
 
-        <div class="container14">
-            <div class="size">111</div>
-            <div class="size">222</div>
-        </div>
-        <div class="container15">
-            <div class="size"></div>
-            <div class="size"></div>
-        </div>
+<div class="container14">
+    <div class="size">111</div>
+    <div class="size">222</div>
+</div>
+<div class="container15">
+    <div class="size"></div>
+    <div class="size"></div>
+</div>
 
-        <div class="container16">
-            <div class="size">111</div>
-            <div class="size">222</div>
-        </div>
+<div class="container16">
+    <div class="size">111</div>
+    <div class="size">222</div>
+</div>
+
+<div class="container17">
+    <div class="size">1111</div>
+    <div class="size">2222</div>
+</div>
+
+<div class="container18">
+    <div class="size">1111</div>
+    <div class="size">2222</div>
+</div>
+
+<div class="container19">
+    <div class="size">1111</div>
+    <div class="size">2222</div>
+    <div class="size">3333</div>
+</div>
+
+<div class="container20">
+    <div class="size">1111</div>
+    <div class="size">2222</div>
+    <div class="size">3333</div>
+</div>
+
+<div class="container21">
+    <div class="size">111</div>
+    <div class="size">222</div>
+    <div class="size">333</div>
+</div>
 </body>
 </html>
