--- a/flex-direction.html
+++ b/flex-direction.html
@@ -268,11 +268,67 @@
             /*justify-content: space-between;*/
             align-content: space-between;
         }
+
         .container23 .row {
             display: flex;
             justify-content: space-between;
             flex-basis: 100%;
         }
+
+        .container24 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            /*justify-content: space-between;*/
+            align-content: space-between;
+        }
+
+        .container24 .row {
+            display: flex;
+            justify-content: space-between;
+            flex-basis: 100%;
+        }
+        .container24 .row:nth-child(2) {
+            justify-content: center;
+        }
+
+        .container25 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            /*justify-content: space-between;*/
+            align-content: space-between;
+        }
+
+        .container25 .row {
+            display: flex;
+            justify-content: space-between;
+            flex-basis: 100%;
+        }
+
+        .container26 {
+            width: 500px;
+            height: 500px;
+            border: 1px solid black;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            /*justify-content: space-between;*/
+            align-content: space-between;
+        }
+
+        .container26 .row {
+            display: flex;
+            justify-content: space-between;
+            flex-basis: 100%;
+        }
+
 
     </style>
 </head>
@@ -397,12 +453,51 @@
 </div>
 
 <div class="container24">
-    <div class="size">1</div>
-    <div class="size">2</div>
-    <div class="size">3</div>
-    <div class="size">4</div>
-    <div class="size">5</div>
+    <div class="row">
+        <div class="size">111</div>
+        <div class="size">222</div>
+    </div>
+    <div class="row">
+        <div class="size">333</div>
+    </div>
+    <div class="row">
+        <div class="size">444</div>
+        <div class="size">555</div>
+    </div>
 </div>
+
+<div class="container25">
+
+    <div class="row">
+        <div class="size">111</div>
+        <div class="size">222</div>
+        <div class="size">333</div>
+    </div>
+    <div class="row">
+        <div class="size">444</div>
+        <div class="size">555</div>
+        <div class="size">666</div>
+    </div>
+</div>
+
+
+<div class="container26">
+    <div class="row">
+        <div class="size">111</div>
+        <div class="size">222</div>
+    </div>
+    <div class="row">
+        <div class="size">333</div>
+        <div class="size">444</div>
+    </div>
+    <div class="row">
+        <div class="size">555</div>
+        <div class="size">666</div>
+    </div>
+</div>
+
+
+
 
 </body>
 </html>
